<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_filter"
        android:icon="@drawable/item_filter"
        android:title="@string/title_filter"
        />
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/item_favourite"
        android:title="@string/title_favourite"
        />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/item_home"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/item_list"
        android:title="@string/title_list"
        />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/item_profile"
        android:title="@string/title_profile"
        />
</menu>