<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_filter"
        android:name="com.asd.mentesaudvel.ui.FilterFragment"
        android:label="@string/title_filter"
        tools:layout="@layout/fragment_filter" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.asd.mentesaudvel.ui.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.asd.mentesaudvel.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.asd.mentesaudvel.ui.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.asd.mentesaudvel.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
