<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/signup_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/signin_logo" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/signup_image"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/username"
            android:drawableLeft="@drawable/email"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/pink_cursor" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/signup_name"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/email"
            android:drawableLeft="@drawable/email"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/pink_cursor" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/signup_email"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/username"
            android:drawableLeft="@drawable/password"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/age"
            android:inputType="number"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/pink_cursor" />


        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/age"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/pink_cursor" />

        <EditText
            android:id="@+id/signup_repassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/signup_password"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/inputs"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:drawableTint="@color/colorPrimary"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/pink_cursor" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_repassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:text="Male" />


            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:text="Female" />

        </RadioGroup>


        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radioGender"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="17dp"
            android:background="@drawable/buttons"
            android:padding="4dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="23dp"
            android:gravity="center_horizontal"
            android:text="@string/already_have_account"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/already_have_account"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.456" />
    </RelativeLayout>

</RelativeLayout>