<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="20dp">


            <ImageView
                android:id="@+id/login_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/signin_logo"
                android:layout_centerHorizontal="true" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_image"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/email"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="4dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textCursorDrawable="@drawable/pink_cursor"
                android:drawableLeft="@drawable/email" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:drawableTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textCursorDrawable="@drawable/pink_cursor"
                android:drawableLeft="@drawable/password" />


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="23dp"
                android:text="@string/need_new_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:gravity="center_horizontal" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="invisible"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.456"
                android:layout_below="@+id/need_new_account_link"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>

</RelativeLayout>